Update to use URI as the primary identifier.
git-svn-id: https://svn.jboss.org/repos/jbossas/projects/microcontainer/trunk/container@56686 84be2c1e-ba19-0410-b317-a758671a6fc1